<resources>
    <string name="CODE_PUSH_APK_BUILD_TIME">1628761580172</string>
    <string name="CodePushDeploymentKey">2i2gy1sFnpXeadGy2FuHdeoxCoZI9d5c5b08-ec09-423f-a28d-7c7f8da6a3ac</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="alert_description">Alert</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="app_name">imToken</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_description">Button</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">"Copy
"</string>
    <string name="catalyst_debug">Debug</string>
    <string name="catalyst_debug_chrome">Debug with Chrome</string>
    <string name="catalyst_debug_chrome_stop">Stop Chrome Debugging</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_nuclide">Debug with Nuclide</string>
    <string name="catalyst_debug_nuclide_error">Failed to communicate with the bundler to enabling debugging with Nuclide.</string>
    <string name="catalyst_debug_stop">Stop Debugging</string>
    <string name="catalyst_dismiss_button">"Dismiss
(ESC)"</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="catalyst_hot_reloading_auto_enable">Switching to development bundle in order to enable Fast Refresh.</string>
    <string name="catalyst_hot_reloading_stop">Disable Fast Refresh</string>
    <string name="catalyst_inspector">Toggle Inspector</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_stop">Hide Perf Monitor</string>
    <string name="catalyst_reload">Reload</string>
    <string name="catalyst_reload_button">"Reload
(R, R)"</string>
    <string name="catalyst_reload_error">Failed to load bundle. Try restarting the bundler or reconnecting your device.</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_sample_profiler_disable">Disable Sampling Profiler</string>
    <string name="catalyst_sample_profiler_enable">Enable Sampling Profiler</string>
    <string name="catalyst_settings">Settings</string>
    <string name="catalyst_settings_title">Debug Settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cmbkb_back">Back</string>
    <string name="cmbkb_caption">CMB Safe Input</string>
    <string name="cmbkb_finish">Finish</string>
    <string name="cmbkb_more">More</string>
    <string name="cmbkb_please_input">Please Input</string>
    <string name="cmbkb_safe_input">Safe Input</string>
    <string name="combobox_description">Combo Box</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="emulator_message">imToken cannot run on a emulator</string>
    <string name="emulator_title">Your device is a emulator</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="exit_wallet">Exit wallet</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="fingerprint_cancel">Cancel</string>
    <string name="fingerprint_dialog_touch_sensor">Touch the fingerprint sensor</string>
    <string name="fingerprint_error_hw_not_available">Fingerprint hardware not available.</string>
    <string name="fingerprint_error_hw_not_present">This device does not have a fingerprint sensor</string>
    <string name="fingerprint_error_lockout">Too many attempts. Please try again later.</string>
    <string name="fingerprint_error_no_fingerprints">No fingerprints enrolled.</string>
    <string name="fingerprint_error_user_canceled">Fingerprint operation canceled by user.</string>
    <string name="fingerprint_failed">Authenticate failed</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
    <string name="fingerprint_prompt">Please authenticate to proceed</string>
    <string name="fingerprint_try_again">Try again</string>
    <string name="generic_error_user_canceled">Authentication canceled by user.</string>
    <string name="header_description">Heading</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hs_beacon_a_few_hours" />
    <string name="hs_beacon_a_few_mins" />
    <string name="hs_beacon_add_attachment" />
    <string name="hs_beacon_add_your_message_here" />
    <string name="hs_beacon_answers" />
    <string name="hs_beacon_article_search_empty_try_broader_term" />
    <string name="hs_beacon_ask" />
    <string name="hs_beacon_attachment_downloading_please_wait">Please wait. Downloading %s</string>
    <string name="hs_beacon_cant_find_any_articles" />
    <string name="hs_beacon_cd_back">Back</string>
    <string name="hs_beacon_cd_close">Close</string>
    <string name="hs_beacon_cd_exit">Exit</string>
    <string name="hs_beacon_cd_handle">Drag handle</string>
    <string name="hs_beacon_cd_rating_negative">Negative rating</string>
    <string name="hs_beacon_cd_rating_positive">Positive rating</string>
    <string name="hs_beacon_cd_rating_search">@string/hs_beacon_escalation_search_title</string>
    <string name="hs_beacon_cd_rating_talk">@string/hs_beacon_escalation_talk_title</string>
    <string name="hs_beacon_cd_unread_thread">Unread message</string>
    <string name="hs_beacon_chat_agent_name_if_missing">Agent</string>
    <string name="hs_beacon_chat_attachment_image_download">Image saved</string>
    <string name="hs_beacon_chat_attachment_invalid_extension_error">The .%s file extension is not supported</string>
    <string name="hs_beacon_chat_attachment_upload_error">Attachment failed to send. Tap to try again.</string>
    <string name="hs_beacon_chat_bot_agent_disconnected_message" />
    <string name="hs_beacon_chat_bot_confirm_message" />
    <string name="hs_beacon_chat_bot_email_prompt" />
    <string name="pingpp_btn_payment_cancel">取消</string>
    <string name="pingpp_btn_payment_reopen">重新打开</string>
    <string name="pingpp_btn_payment_success">已完成</string>
</resources>