<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout android:id="@id/chatMotionLayout" android:background="@color/hs_beacon_chat_screen_background" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layoutDescription="@xml/hs_beacon_activity_chat_scene" app:showPaths="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.recyclerview.widget.RecyclerView android:id="@id/chatHistoryRecycler" android:paddingBottom="@dimen/hs_beacon_material_spacing_big" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintBottom_toTopOf="@id/chatBottomBar" app:layout_constraintTop_toBottomOf="@id/headerCurvedSection" />
    <ImageView android:id="@id/toolbarHeader" android:background="@color/design_default_color_primary" android:layout_width="fill_parent" android:layout_height="@dimen/hs_beacon_chat_header_app_bar_height" android:contentDescription="@null" android:elevation="8.0dip" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/headerCurvedSection" android:background="@drawable/hs_beacon_header_curve" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@null" android:elevation="8.0dip" app:layout_constraintTop_toBottomOf="@id/headerCollapsibleSection" />
    <View android:id="@id/headerCollapsibleSection" android:background="#ff00ff00" android:layout_width="fill_parent" android:layout_height="0.0dip" android:elevation="8.0dip" app:layout_constraintBottom_toBottomOf="@id/headerBottomPadding" app:layout_constraintTop_toTopOf="@id/toolbarHeader" />
    <com.helpscout.beacon.internal.presentation.common.widget.AgentsView android:id="@id/headerAvatars" android:layout_width="wrap_content" android:layout_height="wrap_content" android:elevation="8.0dip" />
    <ImageView android:id="@id/btnBack" android:src="@drawable/hs_beacon_ic_back" android:contentDescription="@string/hs_beacon_cd_back" android:elevation="8.0dip" app:layout_constraintBottom_toBottomOf="@id/toolbarHeader" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/toolbarHeader" style="@style/hs_beacon_BeaconWidget.ToolbarIcon" />
    <ImageView android:id="@id/btnExit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/hs_beacon_ic_exit" android:contentDescription="@string/hs_beacon_cd_exit" android:elevation="8.0dip" app:layout_constraintBottom_toBottomOf="@id/toolbarHeader" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/toolbarHeader" style="@style/hs_beacon_BeaconWidget.ToolbarIcon" />
    <TextView android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:elevation="8.0dip" app:layout_constraintBottom_toBottomOf="@id/toolbarHeader" app:layout_constraintTop_toTopOf="@id/toolbarHeader" style="@style/hs_beacon_Chat.Header.Title" />
    <TextView android:gravity="start" android:id="@id/subtitle1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hs_beacon_material_spacing_big" android:layout_marginBottom="@dimen/hs_beacon_material_spacing_big" android:elevation="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/hs_beacon_BeaconWidget.Header.SubTitle" />
    <Space android:id="@id/bottomPadding" android:layout_width="fill_parent" android:layout_height="16.0dip" app:layout_constraintTop_toBottomOf="@id/subtitle1" />
    <com.helpscout.beacon.internal.presentation.common.widget.AvatarView android:id="@id/assignedAgent" android:layout_width="@dimen/hs_beacon_chat_header_assigned_agent_avatar_size_expanded" android:layout_height="@dimen/hs_beacon_chat_header_assigned_agent_avatar_size_expanded" android:elevation="14.0dip" app:hs_beacon_border_width="2.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbarHeader" />
    <TextView android:gravity="start" android:id="@id/assignedAgentName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hs_beacon_material_spacing_big" android:layout_marginBottom="@dimen/hs_beacon_material_spacing_big" android:alpha="0.0" android:elevation="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/hs_beacon_BeaconWidget.Header.SubTitle" />
    <com.helpscout.beacon.internal.presentation.common.widget.chat.ChatComposerBottomBar android:id="@id/chatBottomBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/hs_beacon_chat_compose_bar_min_height" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/chatHistoryRecycler" />
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/chatSnackCoordinator" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_alignParentBottom="true" app:layout_constraintBottom_toTopOf="@id/chatBottomBar" />
    <com.helpscout.beacon.internal.presentation.common.widget.EndedView android:id="@id/chatEndedView" android:background="@color/hs_beacon_chat_screen_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/headerCollapsibleSection" />
    <com.helpscout.beacon.internal.presentation.common.widget.ErrorView android:id="@id/chatMessageErrorView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/hs_beacon_message_content_paddingTop" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/headerCollapsibleSection" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineChatRatingStart" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/hs_beacon_material_spacing_big" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineChatRatingEnd" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/hs_beacon_material_spacing_big" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineChatRatingBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/hs_beacon_material_spacing_big" />
    <Space android:id="@id/bottomAnchor" android:layout_width="fill_parent" android:layout_height="350.0dip" app:layout_constraintTop_toBottomOf="parent" />
    <View android:id="@id/chatRatingViewBackground" android:background="@drawable/hs_beacon_bg_chat_rating_view" android:layout_width="fill_parent" android:layout_height="0.0dip" android:elevation="12.0dip" app:layout_constraintTop_toTopOf="@id/topSpacing" />
    <Space android:id="@id/topSpacing" android:layout_width="fill_parent" android:layout_height="8.0dip" app:layout_constraintBottom_toTopOf="@id/handle" />
    <ImageView android:id="@id/handle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:src="@drawable/hs_beacon_ic_handle" android:contentDescription="@string/hs_beacon_cd_handle" android:alpha="0.0" android:elevation="12.0dip" app:layout_constraintBottom_toTopOf="@id/chatRatingAssignedAgent" app:layout_constraintEnd_toStartOf="@id/guidelineChatRatingEnd" app:layout_constraintStart_toEndOf="@id/guidelineChatRatingStart" />
    <com.helpscout.beacon.internal.presentation.common.widget.AvatarView android:id="@id/chatRatingAssignedAgent" android:visibility="gone" android:layout_width="@dimen/hs_beacon_chat_rating_assigned_agent_avatar_size" android:layout_height="@dimen/hs_beacon_chat_rating_assigned_agent_avatar_size" android:layout_marginBottom="@dimen/hs_beacon_material_spacing_big" android:elevation="16.0dip" app:hs_beacon_border_width="2.0dip" app:layout_constraintBottom_toTopOf="@id/ratingViewTitle" app:layout_constraintEnd_toStartOf="@id/guidelineChatRatingEnd" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/guidelineChatRatingStart" />
    <TextView android:gravity="center" android:id="@id/ratingViewTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/hs_beacon_material_spacing_medium" android:elevation="12.0dip" app:layout_constraintBottom_toTopOf="@id/positiveRating" app:layout_constraintEnd_toStartOf="@id/guidelineChatRatingEnd" app:layout_constraintStart_toEndOf="@id/guidelineChatRatingStart" style="@style/hs_beacon_Chat.Text.Rating.Title" />
    <com.airbnb.lottie.LottieAnimationView android:id="@id/positiveRating" android:visibility="gone" android:layout_width="@dimen/hs_beacon_chat_rating_indicator_size" android:layout_height="@dimen/hs_beacon_chat_rating_indicator_size" android:scaleType="center" android:elevation="12.0dip" app:layout_constraintBottom_toTopOf="@id/btnNoThanks" app:layout_constraintEnd_toStartOf="@id/neutralRating" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toEndOf="@id/guidelineChatRatingStart" app:srcCompat="@drawable/hs_beacon_ic_rating_positive_off" />
    <com.airbnb.lottie.LottieAnimationView android:id="@id/neutralRating" android:visibility="gone" android:layout_width="@dimen/hs_beacon_chat_rating_indicator_size" android:layout_height="@dimen/hs_beacon_chat_rating_indicator_size" android:scaleType="center" android:layout_marginStart="@dimen/hs_beacon_chat_rating_indicators_separation" android:layout_marginEnd="@dimen/hs_beacon_chat_rating_indicators_separation" android:elevation="12.0dip" app:layout_constraintEnd_toStartOf="@id/negativeRating" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toEndOf="@id/positiveRating" app:layout_constraintTop_toTopOf="@id/positiveRating" app:srcCompat="@drawable/hs_beacon_ic_rating_neutral_off" />
    <com.airbnb.lottie.LottieAnimationView android:id="@id/negativeRating" android:visibility="gone" android:layout_width="@dimen/hs_beacon_chat_rating_indicator_size" android:layout_height="@dimen/hs_beacon_chat_rating_indicator_size" android:scaleType="center" android:elevation="12.0dip" app:layout_constraintEnd_toStartOf="@id/guidelineChatRatingEnd" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/neutralRating" app:layout_constraintTop_toTopOf="@id/positiveRating" app:srcCompat="@drawable/hs_beacon_ic_rating_negative_off" />
    <Button android:id="@id/btnNoThanks" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hs_beacon_material_spacing_medium" android:elevation="12.0dip" app:layout_constraintBottom_toBottomOf="@id/bottomAnchor" app:layout_constraintEnd_toStartOf="@id/guidelineChatRatingEnd" app:layout_constraintStart_toEndOf="@id/guidelineChatRatingStart" style="@style/hs_beacon_BeaconWidget.ButtonBorderless" />
    <View android:id="@id/feedbackDivider" android:background="@color/hs_beacon_divider_color" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="1.0dip" android:alpha="0.0" android:elevation="12.0dip" app:layout_constraintBottom_toTopOf="@id/ratingFeedbackReadOnly" app:layout_constraintEnd_toStartOf="@id/guidelineChatRatingEnd" app:layout_constraintStart_toEndOf="@id/guidelineChatRatingStart" />
    <EditText android:gravity="top" android:id="@id/ratingFeedbackEditMode" android:background="@color/hs_beacon_transparent" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:inputType="textAutoCorrect|textMultiLine" android:imeOptions="actionDone" android:alpha="0.0" android:elevation="12.0dip" app:layout_constraintBottom_toBottomOf="@id/ratingFeedbackReadOnly" app:layout_constraintEnd_toStartOf="@id/guidelineChatRatingEnd" app:layout_constraintStart_toEndOf="@id/guidelineChatRatingStart" app:layout_constraintTop_toTopOf="@id/ratingFeedbackReadOnly" style="@style/hs_beacon_Chat.Text.Rating.Feedback" />
    <TextView android:id="@id/ratingFeedbackCharCount" android:background="@drawable/hs_beacon_chat_rating_char_count" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="@dimen/hs_beacon_material_spacing_medium" android:paddingEnd="@dimen/hs_beacon_material_spacing_medium" android:elevation="12.0dip" app:layout_constraintBottom_toTopOf="@id/btnDone" app:layout_constraintEnd_toEndOf="@id/ratingFeedbackEditMode" style="@style/hs_beacon_Chat.Text.Rating.CharCount" />
    <TextView android:ellipsize="end" android:gravity="top" android:id="@id/ratingFeedbackReadOnly" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" android:maxLines="1" android:alpha="0.0" android:elevation="12.0dip" app:layout_constraintBottom_toTopOf="@id/ratingFeedbackCharCount" app:layout_constraintEnd_toStartOf="@id/guidelineChatRatingEnd" app:layout_constraintStart_toEndOf="@id/guidelineChatRatingStart" style="@style/hs_beacon_Chat.Text.Rating.Feedback" />
    <Button android:id="@id/btnDone" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:alpha="0.0" android:elevation="14.0dip" android:stateListAnimator="@null" app:layout_constraintBottom_toBottomOf="@id/guidelineChatRatingBottom" app:layout_constraintEnd_toStartOf="@id/guidelineChatRatingEnd" app:layout_constraintStart_toEndOf="@id/guidelineChatRatingStart" style="@style/hs_beacon_BeaconWidget.ButtonBorderless.Colored" />
    <View android:id="@id/draggableArea" android:layout_width="fill_parent" android:layout_height="0.0dip" android:elevation="14.0dip" app:layout_constraintBottom_toTopOf="@id/feedbackDivider" app:layout_constraintTop_toTopOf="@id/chatRatingViewBackground" />
    <include android:id="@id/ratingConfirmationView" android:paddingTop="30.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" layout="@layout/hs_beacon_view_chat_rating_sent_confirmation" />
</androidx.constraintlayout.motion.widget.MotionLayout>